--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,12 @@ body {
 h1 {
   @apply text-3xl font-bold mb-4 font-poppins;
 }
+h2 {
+  @apply text-2xl font-bold mb-4 font-montserrat  mt-4;
+}
 
 p {
-  @apply mb-4;
+  @apply mb-2;
 }
 
 ul {
